// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TitleBar render confirmation should render confirmation markup 1`] = `
<body>
  <div>
    <div
      class="titlebar"
      data-spec="titlebar-container"
    >
      <div
        class="undefined normal"
        data-spec="titlebar"
      >
        <div
          class="up_button"
          data-testid="move-icon"
        >
          <span
            class="fe-arrow-up"
          />
        </div>
        <div
          class="titletext"
        >
          Send Message
        </div>
        <div
          class="remove_button"
          data-testid="remove-icon"
        >
          <span
            class="fe-x"
          />
        </div>
      </div>
      <div
        class="remove_confirm"
        data-spec="confirmation"
      >
        <div
          class="up_button"
          data-spec="move"
        />
        <div
          class="titletext"
        >
          Remove?
        </div>
        <div
          class="remove_button"
          data-testid="confirm-removal"
        >
          <span
            class="fe-x"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`TitleBar render move icon should call onMoveUp 1`] = `
<body>
  <div>
    <div
      class="titlebar"
      data-spec="titlebar-container"
    >
      <div
        class="undefined normal"
        data-spec="titlebar"
      >
        <div
          class="up_button"
          data-testid="move-icon"
        >
          <span
            class="fe-arrow-up"
          />
        </div>
        <div
          class="titletext"
        >
          Send Message
        </div>
        <div
          class="remove_button"
          data-testid="remove-icon"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`TitleBar render move icon should render move icon 1`] = `
<div>
  <div
    class="titlebar"
    data-spec="titlebar-container"
  >
    <div
      class="undefined normal"
      data-spec="titlebar"
    >
      <div
        class="up_button"
        data-testid="move-icon"
      >
        <span
          class="fe-arrow-up"
        />
      </div>
      <div
        class="titletext"
      >
        Send Message
      </div>
      <div
        class="remove_button"
        data-testid="remove-icon"
      />
    </div>
  </div>
</div>
`;

exports[`TitleBar render remove icon should render remove icon 1`] = `
<body>
  <div>
    <div
      class="titlebar"
      data-spec="titlebar-container"
    >
      <div
        class="undefined normal"
        data-spec="titlebar"
      >
        <div
          class="up_button"
          data-testid="move-icon"
        >
          <span
            class="fe-arrow-up"
          />
        </div>
        <div
          class="titletext"
        >
          Send Message
        </div>
        <div
          class="remove_button"
          data-testid="remove-icon"
        >
          <span
            class="fe-x"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`TitleBar render should apply _className prop 1`] = `
<div>
  <div
    class="titlebar"
    data-spec="titlebar-container"
  >
    <div
      class="some-classy-class normal"
      data-spec="titlebar"
    >
      <div
        class="up_button"
        data-spec="move"
      />
      <div
        class="titletext"
      >
        Send Message
      </div>
      <div
        class="remove_button"
        data-testid="remove-icon"
      />
    </div>
  </div>
</div>
`;

exports[`TitleBar render should render self, children with base props 1`] = `
<div>
  <div
    class="titlebar"
    data-spec="titlebar-container"
  >
    <div
      class="undefined normal"
      data-spec="titlebar"
    >
      <div
        class="up_button"
        data-spec="move"
      />
      <div
        class="titletext"
      >
        Send Message
      </div>
      <div
        class="remove_button"
        data-testid="remove-icon"
      />
    </div>
  </div>
</div>
`;
